--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Daniel Coutinho - Advocacia e Consultoria Jurídica. Atuação em Direito Civil, Criminal e Consultoria desde 2012.">
+    <meta name="google-site-verification" content="C9-7qr6zFNsyjNslBv9rIWCidvBvdLvt9dWbkkRCZPA" />
     <title>Daniel Coutinho - Advocacia & Consultoria Jurídica</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
